--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <form action="download">
-        <label for="url">连锁</label><br>
+        <label for="url">输入网址，然后单击“下载”</label><br>
         <input type="text" id="url" name="url" title="URL"><br>
         <input type="submit" value="下载">
     </form>
